- Se crearon excepciones - Se agregaron las clases Combo y ModuloPrecios - Se modificaron las clases Producto y ProductoUnico

--- a/Excepciones/.gitignore
+++ b/Excepciones/.gitignore
@@ -5,3 +5,6 @@
 /MesaYADisponibleExcepcion.class
 /MesaYaDisponibleExcepcion.class
 /MesaNoOcupadaExepcion.class
+/CantidadDeProductosInvalidoException.class
+/DescuentoInvalidoException.class
+/PrecioDeVentaInvalidoException.class
