-Se agrego el metodo si existeProducto() en modulo de precio -Se implemento el error ProductoNoEncontrado en los metodos registrarConsumision

--- a/Excepciones/.gitignore
+++ b/Excepciones/.gitignore
@@ -8,3 +8,4 @@
 /CantidadDeProductosInvalidoException.class
 /DescuentoInvalidoException.class
 /PrecioDeVentaInvalidoException.class
+/ProductoNoEncontradoException.class
