-Clase modulo de caja terminada.

--- a/Excepciones/.gitignore
+++ b/Excepciones/.gitignore
@@ -9,3 +9,4 @@
 /DescuentoInvalidoException.class
 /PrecioDeVentaInvalidoException.class
 /ProductoNoEncontradoException.class
+/MesaNoOcupadaExcepcion.class
